<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginRight="@dimen/margin_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@android:color/holo_blue_dark"
                android:layout_marginRight="@dimen/margin_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="TextView"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="3"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/isbn_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="1"
                            tools:text="78-0553801507"
                            android:layout_marginLeft="@dimen/margin_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/isbn" />
                    </TableRow>

                    <TableRow
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/count_page_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="1"
                            tools:text="900"
                            android:layout_marginLeft="@dimen/margin_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/page_count" />
                    </TableRow>
                    <TableRow
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/authors_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="1"
                            tools:text="Мартин\nМартин2"
                            android:layout_marginLeft="@dimen/margin_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/authors" />
                    </TableRow>
                    <TableRow
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/year_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="1"
                            tools:text="18 декабря 2010"
                            android:layout_marginLeft="@dimen/margin_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/year" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>


        </LinearLayout>




    </android.support.v7.widget.CardView>

</LinearLayout>